syntax = "proto3";
package onebot;
import "onebot_api.proto";
import "onebot_event.proto";
option go_package="./onebot";

message Frame{
    int64 bot_id = 1;
    FrameType frame_type = 2;
    string echo = 3;
    bool ok = 4; // 是否正常 （API resp）
    map<string, string> extra = 100;

    oneof data{
        PrivateMessageEvent private_message_event = 101;
        GroupMessageEvent group_message_event = 102;
        GroupUploadNoticeEvent group_upload_notice_event = 103;
        GroupAdminNoticeEvent group_admin_notice_event = 104;
        GroupDecreaseNoticeEvent group_decrease_notice_event = 105;
        GroupIncreaseNoticeEvent group_increase_notice_event = 106;
        GroupBanNoticeEvent group_ban_notice_event = 107;
        FriendAddNoticeEvent friend_add_notice_event = 108;
        GroupRecallNoticeEvent group_recall_notice_event = 109;
        FriendRecallNoticeEvent friend_recall_notice_event = 110;
        FriendRequestEvent friend_request_event = 111;
        GroupRequestEvent  group_request_event = 112;
        GroupTempMessageEvent  group_temp_message_event = 113;
        GroupNotifyEvent group_notify_event = 114;
        ChannelMessageEvent channel_message_event = 115;

        SendPrivateMsgReq send_private_msg_req = 201;
        SendGroupMsgReq send_group_msg_req = 202;
        SendMsgReq send_msg_req = 203;
        DeleteMsgReq delete_msg_req = 204;
        GetMsgReq get_msg_req = 205;
        GetForwardMsgReq get_forward_msg_req = 206;
        SendLikeReq send_like_req = 207;
        SetGroupKickReq set_group_kick_req = 208;
        SetGroupBanReq set_group_ban_req = 209;
        SetGroupAnonymousBanReq set_group_anonymous_ban_req = 210;
        SetGroupWholeBanReq set_group_whole_ban_req = 211;
        SetGroupAdminReq set_group_admin_req = 212;
        SetGroupAnonymousReq set_group_anonymous_req = 213;
        SetGroupCardReq set_group_card_req = 214;
        SetGroupNameReq set_group_name_req = 215;
        SetGroupLeaveReq set_group_leave_req = 216;
        SetGroupSpecialTitleReq set_group_special_title_req = 217;
        SetFriendAddRequestReq set_friend_add_request_req = 218;
        SetGroupAddRequestReq set_group_add_request_req = 219;
        GetLoginInfoReq get_login_info_req = 220;
        GetStrangerInfoReq get_stranger_info_req = 221;
        GetFriendListReq get_friend_list_req = 222;
        GetGroupInfoReq get_group_info_req = 223;
        GetGroupListReq get_group_list_req = 224;
        GetGroupMemberInfoReq get_group_member_info_req = 225;
        GetGroupMemberListReq get_group_member_list_req = 226;
        GetGroupHonorInfoReq get_group_honor_info_req = 227;
        GetCookiesReq get_cookies_req = 228;
        GetCsrfTokenReq get_csrf_token_req = 229;
        GetCredentialsReq get_credentials_req = 230;
        GetRecordReq get_record_req = 231;
        GetImageReq get_image_req = 232;
        CanSendImageReq can_send_image_req = 233;
        CanSendRecordReq can_send_record_req = 234;
        GetStatusReq get_status_req = 235;
        GetVersionInfoReq get_version_info_req = 236;
        SetRestartReq set_restart_req = 237;
        CleanCacheReq clean_cache_req = 238;
        SetGroupSignInReq set_group_sign_in_req = 239;
        SendMusicReq send_music_req = 240;
        SendGroupPokeReq send_group_poke_req = 241;
        SendFriendPokeReq send_friend_poke_req = 242;
        SendChannelMsgReq send_channel_msg_req = 243;

        SendPrivateMsgResp send_private_msg_resp = 301;
        SendGroupMsgResp send_group_msg_resp = 302;
        SendMsgResp send_msg_resp = 303;
        DeleteMsgResp delete_msg_resp = 304;
        GetMsgResp get_msg_resp = 305;
        GetForwardMsgResp get_forward_msg_resp = 306;
        SendLikeResp send_like_resp = 307;
        SetGroupKickResp set_group_kick_resp = 308;
        SetGroupBanResp set_group_ban_resp = 309;
        SetGroupAnonymousBanResp set_group_anonymous_ban_resp = 310;
        SetGroupWholeBanResp set_group_whole_ban_resp = 311;
        SetGroupAdminResp set_group_admin_resp = 312;
        SetGroupAnonymousResp set_group_anonymous_resp = 313;
        SetGroupCardResp set_group_card_resp = 314;
        SetGroupNameResp set_group_name_resp = 315;
        SetGroupLeaveResp set_group_leave_resp = 316;
        SetGroupSpecialTitleResp set_group_special_title_resp = 317;
        SetFriendAddRequestResp set_friend_add_request_resp = 318;
        SetGroupAddRequestResp set_group_add_request_resp = 319;
        GetLoginInfoResp get_login_info_resp = 320;
        GetStrangerInfoResp get_stranger_info_resp = 321;
        GetFriendListResp get_friend_list_resp = 322;
        GetGroupInfoResp get_group_info_resp = 323;
        GetGroupListResp get_group_list_resp = 324;
        GetGroupMemberInfoResp get_group_member_info_resp = 325;
        GetGroupMemberListResp get_group_member_list_resp = 326;
        GetGroupHonorInfoResp get_group_honor_info_resp = 327;
        GetCookiesResp get_cookies_resp = 328;
        GetCsrfTokenResp get_csrf_token_resp = 329;
        GetCredentialsResp get_credentials_resp = 330;
        GetRecordResp get_record_resp = 331;
        GetImageResp get_image_resp = 332;
        CanSendImageResp can_send_image_resp = 333;
        CanSendRecordResp can_send_record_resp = 334;
        GetStatusResp get_status_resp = 335;
        GetVersionInfoResp get_version_info_resp = 336;
        SetRestartResp set_restart_resp = 337;
        CleanCacheResp clean_cache_resp = 338;
        SetGroupSignInResp set_group_sign_in_resp = 339;
        SendMusicResp send_music_resp = 340;
        SendGroupPokeResp send_group_poke_resp = 341;
        SendFriendPokeResp send_friend_poke_resp = 342;
        SendChannelMsgResp send_channel_msg_resp = 343;
    }

    enum FrameType{
        TUNKNOWN = 0;

        TPrivateMessageEvent = 101;
        TGroupMessageEvent = 102;
        TGroupUploadNoticeEvent = 103;
        TGroupAdminNoticeEvent = 104;
        TGroupDecreaseNoticeEvent = 105;
        TGroupIncreaseNoticeEvent = 106;
        TGroupBanNoticeEvent = 107;
        TFriendAddNoticeEvent = 108;
        TGroupRecallNoticeEvent = 109;
        TFriendRecallNoticeEvent = 110;
        TFriendRequestEvent = 111;
        TGroupRequestEvent = 112;
        TGroupTempMessageEvent = 113;
        TGroupNotifyEvent = 114;
        TChannelMessageEvent = 115;

        TSendPrivateMsgReq = 201;
        TSendGroupMsgReq = 202;
        TSendMsgReq = 203;
        TDeleteMsgReq = 204;
        TGetMsgReq = 205;
        TGetForwardMsgReq = 206;
        TSendLikeReq = 207;
        TSetGroupKickReq = 208;
        TSetGroupBanReq = 209;
        TSetGroupAnonymousReq = 210;
        TSetGroupWholeBanReq = 211;
        TSetGroupAdminReq = 212;
        TSetGroupAnonymousBanReq = 213;
        TSetGroupCardReq = 214;
        TSetGroupNameReq = 215;
        TSetGroupLeaveReq = 216;
        TSetGroupSpecialTitleReq = 217;
        TSetFriendAddRequestReq = 218;
        TSetGroupAddRequestReq = 219;
        TGetLoginInfoReq = 220;
        TGetStrangerInfoReq = 221;
        TGetFriendListReq = 222;
        TGetGroupInfoReq = 223;
        TGetGroupListReq = 224;
        TGetGroupMemberInfoReq = 225;
        TGetGroupMemberListReq = 226;
        TGetGroupHonorInfoReq = 227;
        TGetCookiesReq = 228;
        TGetCsrfTokenReq = 229;
        TGetCredentialsReq = 230;
        TGetRecordReq = 231;
        TGetImageReq = 232;
        TCanSendImageReq = 233;
        TCanSendRecordReq = 234;
        TGetStatusReq = 235;
        TGetVersionInfoReq = 236;
        TSetRestartReq = 237;
        TCleanCacheReq = 238;
        TSetGroupSignInReq = 239;
        TSendMusicReq = 240;
        TSendGroupPokeReq = 241;
        TSendFriendPokeReq = 242;
        TSendChannelMsgReq = 243;

        TSendPrivateMsgResp = 301;
        TSendGroupMsgResp = 302;
        TSendMsgResp = 303;
        TDeleteMsgResp = 304;
        TGetMsgResp = 305;
        TGetForwardMsgResp = 306;
        TSendLikeResp = 307;
        TSetGroupKickResp = 308;
        TSetGroupBanResp = 309;
        TSetGroupAnonymousResp = 310;
        TSetGroupWholeBanResp = 311;
        TSetGroupAdminResp = 312;
        TSetGroupAnonymousBanResp = 313;
        TSetGroupCardResp = 314;
        TSetGroupNameResp = 315;
        TSetGroupLeaveResp = 316;
        TSetGroupSpecialTitleResp = 317;
        TSetFriendAddRequestResp = 318;
        TSetGroupAddRequestResp = 319;
        TGetLoginInfoResp = 320;
        TGetStrangerInfoResp = 321;
        TGetFriendListResp = 322;
        TGetGroupInfoResp = 323;
        TGetGroupListResp = 324;
        TGetGroupMemberInfoResp = 325;
        TGetGroupMemberListResp = 326;
        TGetGroupHonorInfoResp = 327;
        TGetCookiesResp = 328;
        TGetCsrfTokenResp = 329;
        TGetCredentialsResp = 330;
        TGetRecordResp = 331;
        TGetImageResp = 332;
        TCanSendImageResp = 333;
        TCanSendRecordResp = 334;
        TGetStatusResp = 335;
        TGetVersionInfoResp = 336;
        TSetRestartResp = 337;
        TCleanCacheResp = 338;
        TSetGroupSignInResp = 339;
        TSendMusicResp = 340;
        TSendGroupPokeResp = 341;
        TSendFriendPokeResp = 342;
        TSendChannelMsgResp = 343;
    }
}
